# memex

./: .dockerignore  .gitignore  README.md  README.zh.md  ROADMAP.md  devNote.md  middleware.ts  package-lock.json  package.json  prisma.config.ts  railpack.json
app/: layout.tsx  page.tsx  route-helper.ts
app/(registration)/login/: page.tsx
app/api/v1/apiKey/: route.ts
app/api/v1/retrieval/: route.ts
app/api/v1/vectorSearchOnly/: route.ts
apps/desktop/: .gitignore  index.html  package.json  panda.config.ts  perry.toml  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.ts  main.tsx  style.css
apps/desktop/src-tauri/: .gitignore  Cargo.toml  diesel.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/2026-06-16-000000_init/: down.sql  up.sql
apps/desktop/src-tauri/migrations/2026-06-21-000000_drop_session/: down.sql
apps/desktop/src-tauri/resources/: README.md
apps/desktop/src-tauri/src/: config.rs  embed.rs  lib.rs  main.rs  rerank.rs  state.rs  store.rs  sync.rs
apps/desktop/src-tauri/src/commands/: auth_commands.rs  mod.rs  my_custom_command.rs
apps/desktop/src-tauri/src/db/: mod.rs  models.rs  queries.rs  schema.rs
apps/desktop/src-tauri/src/models/: mod.rs
apps/desktop/src-tauri/src/pipeline/: mod.rs  queue.rs  scheduler.rs
apps/desktop/src-tauri/src/processors/: mod.rs  user_focus_ui_processor.rs
apps/desktop/src-tauri/src/uia/: mod.rs  selection_watcher.rs  traverse_all_elements.rs  traverse_focused_windows.rs
apps/desktop/src/.perry-cache/: audit.json
apps/desktop/src/components/: auth-layout.tsx  onboarding-layout.tsx  protected.tsx
apps/desktop/src/lib/: api.ts  auth.ts
apps/desktop/src/pages/: Dashboard.tsx  Home.tsx  Hud.tsx  Login.tsx  Settings.tsx  Setup.tsx  Signup.tsx
apps/docling/: Dockerfile  main.py  process.py  requirements.txt
apps/extension/: components.json  package.json  wtx.d.ts  wxt.config.ts
apps/extension/components/ui/: alert.tsx  card.tsx
apps/extension/entrypoints/: background.ts  content.ts  type.ts
apps/extension/entrypoints/background/: index.ts
apps/extension/entrypoints/popup/: App.css  App.tsx  style.css
apps/mcp/: README.md  package.json  tsconfig.json
apps/mcp/src/: index.ts  memexClient.ts
apps/memex/: .dockerignore  Dockerfile  dev-note.md  interceptors.ts  next.config.ts  package.json  prisma.config.ts  proxy.ts
apps/memex/app/: axios-setup.tsx  layout.tsx
apps/memex/mcp/: index.ts
apps/memex/prisma/schema/: ApiKey.prisma  browserExtensionPreference.prisma  document.prisma  session.prisma  user.prisma
apps/memex/scripts/: backfill-simvector.ts
apps/memex/services/docling/: bootstrap.ps1  bootstrap.sh  compare.py  process.py  (+1 more)
benchmark/: eval_models.py
prisma/schema/: base.prisma  document.prisma  user.prisma
utils/AI/: prompts.ts
utils/AI/pipeline/: ingest.ts  retrieval.ts
utils/AI/semanticChunk/: chunk.ts
utils/api/: route.generate.ts
utils/api/auth/: token.ts
(+63 files in other folders)
