[package]
name = "memex-desktop"
version = "0.1.0"
description = "memex desktop"
edition = "2021"
rust-version = "1.85.0"

[lib]
name = "memex_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-window-state = "2.0"
tauri-plugin-http = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uiautomation = "0.25.0"
keyring = "3.6.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
